--- a/SpamrollGiveaway/SpamrollGiveaway.csproj
+++ b/SpamrollGiveaway/SpamrollGiveaway.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Dalamud.NET.Sdk/13.0.0">
   <PropertyGroup>
     <AssemblyName>SpamrollGiveaway</AssemblyName>
-    <Version>1.0.0.0</Version>
+    <Version>2.3.0.0</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <Authors>Kirin Avenleigh</Authors>
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Data\goat.png">
+    <Content Include="SpamrollGiveaway.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
     </Content>
